vscode/deploymen.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: tensorboard_mapping
      prefix: /tensorboard/tensorboard/
      rewrite: /
      service: tensorboard-tb.kubeflow
  labels:
    ksonnet.io/component: tensorboard
  name: tensorboard-tb
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: tensorboard
    tb-job: tensorboard
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    ksonnet.io/component: tensorboard
  name: tensorboard-tb
  namespace: kubeflow
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tensorboard
        tb-job: tensorboard
      name: tensorboard
      namespace: kubeflow
    spec:
      containers:
      - env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /secret/gcp-credentials/user-gcp-sa.json
        image: tensorflow/tensorflow:1.8.0
        name: tensorboard
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /secret/gcp-credentials
          name: gcp-credentials
      volumes:
      - name: gcp-credentials
        secret:
          secretName: user-gcp-sa
