vscode/jlewi-vscode.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: jlewi-vcode_vscode_mapping
      prefix: /vscode/jlewi-vscode
      rewrite: /
      service: jlewi-vscode-svc.kubeflow
  labels:
    ksonnet.io/component: tensorboard
  name: jlewi-vscode-svc
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8443
  selector:
    notebook-name: jlewi-vscode
