vscode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jlvs # {"$kpt-set":"name"}
spec:
  ports:
  - name: http-vscode
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jlvs # {"$kpt-set":"name"}
  # Uncomment for statefulset
  #clusterIP: None
